# Easy-gRPC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
EasyGRPC/: CMakeLists.txt
EasyGRPC/include/ShuHai/: FunctionTraits.h
EasyGRPC/include/ShuHai/gRPC/: AsyncAction.h  AsyncActionQueue.h  CompletionQueueWorker.h  CustomAsyncAction.h  IAsyncAction.h  RpcType.h  StreamingError.h  TypeTraits.h  Version.h
EasyGRPC/include/ShuHai/gRPC/Client/: AsyncCallAction.h  AsyncClient.h  AsyncClientStreamCall.h  AsyncClientStreamWriter.h  AsyncUnaryCall.h  StreamActions.h  TypeTraits.h
EasyGRPC/include/ShuHai/gRPC/Server/: AsyncActionQueue.h  AsyncCallHandler.h  AsyncClientStreamCallHandler.h  AsyncClientStreamReader.h  AsyncServer.h  AsyncUnaryCallHandler.h  CompletionQueueWorker.h  StreamActions.h  TypeTraits.h
cmake/: Debug.cmake  EasyGRPCConfig.cmake.in  TargetUtilities.cmake  Utilities.cmake  Version.h.in.h  gRPC-Quick-Config.cmake.in  gRPC.cmake  gRPCQuickConfig.cmake.in
cmake/Modules/: Findasio.cmake
examples/: CMakeLists.txt
examples/Common/: CMakeLists.txt
examples/Common/include/ShuHai/gRPC/Examples/: Console.h  Thread.h
examples/HelloWorld/: CMakeLists.txt
examples/HelloWorld/proto/: HelloWorld.proto  helloworld.proto
examples/HelloWorld/src/: Main.cpp
examples/ProtoTargets/: CMakeLists.txt
examples/ProtoTargets/include/FooApp/: App.proto
examples/ProtoTargets/include/FooLib/: Base.proto
examples/SimpleCall/: CMakeLists.txt
examples/SimpleCall/proto/: App.proto  Task.proto
examples/SimpleCall/src/: AppRpcClient.h  AppRpcService.cpp  AppRpcService.h  Main.cpp  TaskRpcClient.h  TaskRpcService.cpp  TaskRpcService.h
examples/Streaming/: CMakeLists.txt
examples/Streaming/proto/: Streaming.proto
examples/Streaming/src/: Main.cpp
gRPC/: CMakeLists.txt
gRPC/include/ShuHai/gRPC/: AsyncReaderState.h  AsyncStreamState.h  CompletionQueueNotification.h  CompletionQueueTag.h  CompletionQueueWorker.h  RpcType.h  TypeTraits.h  Version.h
gRPC/include/ShuHai/gRPC/Client/: AsyncCall.h  AsyncCallAction.h  AsyncCallBase.h  AsyncCallError.h  AsyncClient.h  AsyncClientStreamCall.h  AsyncServerStream.h  AsyncServerStreamCall.h  AsyncStreamCall.h  AsyncUnaryCall.h  Exceptions.h  RpcInvocationError.h  StreamActions.h  TypeTraits.h
gRPC/include/ShuHai/gRPC/Client/Detail/: AsyncCallBase.h  AsyncUnaryCall.h
gRPC/include/ShuHai/gRPC/Client/Internal/: AsyncCallBase.h  AsyncServerStream.h  AsyncUnaryCall.h
gRPC/include/ShuHai/gRPC/Server/: AsyncCallHandlerBase.h  AsyncClientStreamCallHandler.h  AsyncServer.h  AsyncServerStreamHandler.h  AsyncUnaryCallHandler.h  CompletionQueue.h  CompletionQueueWorker.h  ServiceRequestAction.h  TypeTraits.h
gRPC/include/ShuHai/gRPC/Server/Detail/: AsyncCallHandlerBase.h  AsyncUnaryCallHandler.h
gRPC/include/ShuHai/gRPC/Server/Internal/: AsyncCallHandlerBase.h  AsyncServerStreamHandler.h  AsyncUnaryCallHandler.h
include/ShuHai/: FunctionTraits.h  TypeTraits.h
include/ShuHai/gRPC/Client/: AsyncClient.h  Exceptions.h  TypeTraits.h
include/ShuHai/gRPC/Client/Detail/: AsyncCallBase.h  AsyncUnaryCall.h
include/ShuHai/gRPC/Server/: AsyncServer.h  CompletionQueue.h  TypeTraits.h
include/ShuHai/gRPC/Server/Detail/: AsyncUnaryCallHandler.h
test/: CMakeLists.txt
test/EasyGRPC/: AsyncActionQueueTest.cpp  CompletionQueueWorkerTest.cpp
